--- a/src/styles/components/bannerabout.scss
+++ b/src/styles/components/bannerabout.scss
@@ -1,5 +1,5 @@
 .bannerabout{
-    width: 1240px;
+    width: 100%;
     height: 223px;
     display: flex;
     align-items: center;
@@ -10,11 +10,11 @@
     background-position: center;
 }
 
-@media screen and (max-width: 400px)
+@media screen and (max-width: 767px)
     {   
     .bannerabout{
         height: 223px;
-        width: 100%;
-        background-size: 100%;
+        background-size: cover;
+
     }      
     }
