--- a/src/styles/components/bannerhome.scss
+++ b/src/styles/components/bannerhome.scss
@@ -1,10 +1,4 @@
-.Banner {
-
-    h1{
-        position: absolute;
-        z-index: 1;
-
-    }
+.Banner {    
     width: 100%;
     height: 223px;
     display: flex;
@@ -12,8 +6,15 @@
     justify-content: center;
     border-radius: 25px; 
     margin-top: 50px;
-    background: #000;
+    background: black;
     margin-bottom: 43px;
+
+    h1{
+        position: absolute;
+        z-index: 1;
+        width: 50%;
+        text-align: center;
+    }
 }
 
 .imgbanner1 { 
@@ -25,7 +26,7 @@
     border-radius: 25px; 
 }
 
-@media screen and (max-width: 400px)
+@media screen and (max-width: 767px)
 		{   
 		.Banner{
             height: 111px;
@@ -38,6 +39,7 @@
                 padding-left: 16px;
                 white-space: nowrap;
                 line-height: 1;
+                text-align: left;
               }
           
               
