--- a/src/styles/components/carrousel.scss
+++ b/src/styles/components/carrousel.scss
@@ -5,7 +5,7 @@
   }
   
 .carousel-image {
-    width: 1240px;
+    width: 100%;
     height: 415px;
     border-radius: 25px;
     object-fit: cover;
@@ -18,12 +18,12 @@ button{
   }
 button.prevarrow{  
     position: absolute;    
-    left: 24px;
+    left: 2%;
    } 
 
 button.nextarrow{
     position: absolute;
-    left: 1176px;
+    right: 2%;
     }
 
 .photo-counter{
@@ -37,11 +37,10 @@ button.nextarrow{
 }
   
 
-@media screen and (max-width: 400px)
+@media screen and (max-width: 767px)
 {   
 
 .carousel-image{
-  width: 335px;
   border-radius: 10px;
   height: 255px;
 }
@@ -51,10 +50,10 @@ button img{
 }
 button.prevarrow{  
   position: absolute;    
-  left: 10px;
+  left: 2%;
 } 
 button.nextarrow{
-  left: 301px;
+  right: 2%;
 }
 .photo-counter{
   top: 230px;
