--- a/src/styles/components/fichehost.scss
+++ b/src/styles/components/fichehost.scss
@@ -1,6 +1,7 @@
 .host{
     display: flex;
     margin-bottom: 21px;
+    justify-content: end;
   }
 
 .hostname{
@@ -14,11 +15,10 @@
   margin-left: 10px;
 }
 
-@media screen and (max-width: 400px)
+@media screen and (max-width: 767px)
 		{   
       .host{
         height: 33px;
-
       }
 
       .hostname{
