--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -8,13 +8,17 @@
 }
 
 
-@media screen and (max-width: 400px)
+@media screen and (max-width: 767px)
 		{   
             .header{
-                margin-top: 0;
+                height: 46px;
+                margin-top: 20px;
             }
 
-		img{
-            width: 145px;
+		.logo{
+            width: 43%;
+            img{
+                width: 100%;
+            }
         }        
 		}
