--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -8,24 +8,25 @@
     ul{
     list-style-type: none;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     padding-bottom: 50px;
-    
+    padding-left: 0;
     
 
     li{
         margin-top: 50px;
         margin-left: 30px;
+        margin-right: 30px;
+        width: 27.5%;
+        min-width: 300px;
     }
     }
 }
 
-@media screen and (max-width: 400px)
+@media screen and (max-width: 767px)
 		{   
         .cardslist{
-            width: 100%;
-            height: auto; 
-            border-radius: 25px;
             background: none;
             
 
@@ -36,7 +37,7 @@
                 
             
             li{
-                margin: 0;
+                margin: 5px;
                 }
                 }
         }      
