--- a/src/styles/components/fichetags.scss
+++ b/src/styles/components/fichetags.scss
@@ -1,28 +1,9 @@
 .tags{ 
-     
-ul{
-    padding-left: 0;
-    list-style: none;
     display: flex;
-    margin-bottom: 10px;
-    display: flex;  
+    flex-direction: row; 
     flex-wrap: wrap;
-}
-    
-
-li{
-    background-color: #FF6060;
-    border-radius: 10px; 
-    width: auto;
-    min-width: 115px;
-    padding-left: 10px;
-    padding-right: 10px;
-    height: 25px;
-    text-align: center;
-    color: white;
-    margin-right: 10px;
+    margin-top: 20px;
     margin-bottom: 10px;
-}
 }
 
 
@@ -30,17 +11,7 @@ li{
 {   
 
     .tags{
-        li{
-            min-width: 74px;
-            font-size: 10px;
-            height: auto;
-            min-height: 18px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 5px;
-            padding-left: 1.3px;
-            padding-right: 1.3px;
-        }
+    
+        
      }
 }
